Fix margins on mobile devices

--- a/assets/styles/components/pagination.scss
+++ b/assets/styles/components/pagination.scss
@@ -1,5 +1,6 @@
 .pagination {
   display: flex;
+  margin: 0 10px;
 }
 
 .pagination__item {
@@ -22,4 +23,10 @@
 
 .pagination__link:hover {
   color: $headline-seconday-color;
+}
+
+@media screen and (min-width: 640px) {
+  .pagination {
+    margin: 0;
+  }
 }
